fixing a few spacing issues

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1100,6 +1100,7 @@ div.contact {
                     align-self: flex-start;
                     filter: drop-shadow(0px 0px 13px rgba(3, 47, 97, 0.08));
                     border-radius: 10px;
+                    margin-bottom: 1.5em;
                     &:nth-of-type(1) {
                         width: 22%;
                     }
@@ -1226,6 +1227,7 @@ div.contact {
             }
 
             .styleguide {
+                flex-direction: column;
                 img {
                     max-width: 60%;
                     border-radius: 10px;
@@ -1845,7 +1847,9 @@ div.contact {
     }
 
 
-
+    div.hero {
+    margin-top: 8em;
+    }
 
     /* --------- Main Page------------ */
     div.project {
@@ -2152,7 +2156,9 @@ div.contact {
                     }
                 }
 
+
                 .styleguide {
+                    align-items: center;
                     img {
                         max-width: 80%;
                     }
